ref #91: Reformat fields.

--- a/public/assets/portal/css/register.css
+++ b/public/assets/portal/css/register.css
@@ -317,10 +317,20 @@
       padding: 10px 0;
       font-size: 13px;
       color: #666; }
+      .register_step3 .content .field i {
+        position: absolute;
+        right: 20px;
+        top: 0;
+        padding-top: 2px;
+        opacity: .5;
+        filter: alpha(opacity=50) !important;
+        /* For IE8 and earlier */ }
       .register_step3 .content .field input {
         color: #666;
         width: 100%;
-        border-radius: 6px; }
+        border-radius: 6px;
+        text-align: right;
+        padding-right: 10px; }
   .register_step3 .footer {
     overflow: auto;
     padding: 12px;
@@ -334,7 +344,7 @@
       font-size: 18px;
       color: #666666; }
     .register_step3 .footer .actions button {
-      font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+      font-family: 'Open Sans', 'Droid Sans', sans-serif;
       font-weight: bold;
       font-size: 15px;
       color: #FFF;
