--- a/resources/assets/sass/register/register.scss
+++ b/resources/assets/sass/register/register.scss
@@ -37,7 +37,7 @@
     padding: 8px;
     background-color: white;
 
-    >.header {
+    > .header {
       .step {
         float: left;
         line-height: 44px;
@@ -55,147 +55,160 @@
       }
     }
 
+    > .row {
+      padding: 5px;
+      overflow: auto;
+      padding-left: 8px;
 
-      >.row {
-        padding: 5px;
-        overflow: auto;
-        padding-left:8px;
-
-        >.header {
-          font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
-          font-size: 14px;
-          font-weight:bold;
-          color: #ff9900;
-          line-height: 40px;
-        }
-
-        >.column {
-          width: 50%;
-          float: left;
-
-          >.row {
-            line-height: 30px;
-            overflow: auto;
-
-
-            .label {
-              font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
-              font-size: 13px;
-              width: 40%;
-              float: left;
-              color:black;
-              display: inline-block;
-
-            }
-
-            .field {
-              font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
-              font-size: 12px;
-              width:50%;
-              float: left;
-              padding-top:5px;
-              background-color:#FFF;
-
-
-              input[type="text"],
-              input[type="password"],
-              input[type="email"] {
-                float:left;
-                border: 1px solid black;
-                border-radius: 6px !important;
-                width: 171px;
-
-              }
-              input[type="checkbox"] {
-
-
-              }
-
-              select {
-                float:left;
-                border-radius: 6px !important;
-                border: 1px solid lightgray !important;
-                height: 20px;
-                min-width: 50px;
-                background-color:#FFF;
-                width: 171px;
-              }
-
-              .fa-check-circle{
-                position: absolute;
-                font-size: 1.4em;
-                margin-left:-20px;
-                margin-top:2px;
-              }
-              .fa-exclamation-circle
-              {
-
-                font-size: 1.4em;
-                margin-left:-20px;
-                margin-top:2px;
-              }
-
-              .warning-color{
-                color:red;
-              }
-              .success-color{
-                color:green
-              }
-
-            }
-              .fieldTop {
-                font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
-                font-size: 12px;
-                width:50%;
-                float: left;
-                padding-top:0px;
-                background-color:#FFF;
-
-                input[type="text"],
-                input[type="checkbox"],
-                input[type="password"],
-                input[type="email"] {
-                  float:left;
-                  border: 1px solid black;
-                  border-radius: 6px !important;
-                  width: 171px;
-                }
-
-                select {
-                  float:left;
-                  border: 1px solid lightgray !important;
-                  border-radius: 6px !important;
-                  height: 20px;
-                  min-width: 50px;
-                  background-color:#FFF;
-                  width: 171px;
-                }
-                .fa-check-circle{
-                  position:absolute;
-                  font-size: 1.4em;
-                  margin-left:138px;
-                  margin-top:2px;
-                }
-                .fa-exclamation-circle
-                {
-                  position:absolute;
-                  font-size: 1.4em;
-                  margin-left:138px;
-                  margin-top:2px;
-                }
-
-                .warning-color{
-                  color:red;
-                }
-                .success-color{
-                  color:green
-                }
-              }
-
-          }
-        }
+      > .header {
+        font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+        font-size: 14px;
+        font-weight: bold;
+        color: #ff9900;
+        line-height: 40px;
       }
 
+      > .column {
+        width: 50%;
+        float: left;
+
+        > .row {
+          line-height: 30px;
+          overflow: auto;
+
+          .label {
+            font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
+            font-size: 13px;
+            width: 40%;
+            float: left;
+            color: black;
+            display: inline-block;
+
+          }
+
+          .field {
+            font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
+            font-size: 12px;
+            width: 50%;
+            float: left;
+            padding-top: 5px;
+            background-color: #FFF;
+
+            input[type="text"],
+            input[type="password"],
+            input[type="email"] {
+              float: left;
+              border: 1px solid black;
+              border-radius: 6px !important;
+              width: 171px;
+
+            }
+            input[type="checkbox"] {
+
+            }
+
+            select {
+              float: left;
+              border-radius: 6px !important;
+              border: 1px solid lightgray !important;
+              height: 20px;
+              min-width: 50px;
+              background-color: #FFF;
+              width: 171px;
+            }
+
+            .fa-check-circle {
+              position: absolute;
+              font-size: 1.4em;
+              margin-left: -20px;
+              margin-top: 2px;
+            }
+            .fa-exclamation-circle {
+
+              font-size: 1.4em;
+              margin-left: -20px;
+              margin-top: 2px;
+            }
+
+            .warning-color {
+              color: red;
+            }
+            .success-color {
+              color: green
+            }
+
+          }
+          .fieldTop {
+            font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
+            font-size: 12px;
+            width: 50%;
+            float: left;
+            padding-top: 0px;
+            background-color: #FFF;
+
+            input[type="text"],
+            input[type="checkbox"],
+            input[type="password"],
+            input[type="email"] {
+              float: left;
+              border: 1px solid black;
+              border-radius: 6px !important;
+              width: 171px;
+            }
+
+            select {
+              float: left;
+              border: 1px solid lightgray !important;
+              border-radius: 6px !important;
+              height: 20px;
+              min-width: 50px;
+              background-color: #FFF;
+              width: 171px;
+            }
+            .fa-check-circle {
+              position: absolute;
+              font-size: 1.4em;
+              margin-left: 138px;
+              margin-top: 2px;
+            }
+            .fa-exclamation-circle {
+              position: absolute;
+              font-size: 1.4em;
+              margin-left: 138px;
+              margin-top: 2px;
+            }
+
+            .warning-color {
+              color: red;
+            }
+            .success-color {
+              color: green
+            }
+          }
+
+        }
+      }
+    }
+    .bs-wp {
+      padding: 16px;
+
+      .col-xs-3,
+      .col-xs-4,
+      .col-xs-5 {
+        padding: 0 5px;
+      }
+      label {
+        font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
+        font-size: 11px;
+        color: black;
+        font-weight: normal;
+      }
+      input {
+        width: 100%;
+        border: 1px solid black;
+        border-radius: 6px !important;
+      }
+    }
   }
 
   >.footer {
@@ -269,7 +282,7 @@
   }
 
   .g-recaptcha {
-    float: right;
+
   }
 }
 
