--- a/resources/assets/sass/register/register.scss
+++ b/resources/assets/sass/register/register.scss
@@ -59,36 +59,47 @@
           line-height: 30px;
           overflow-y: auto;
           overflow-x: hidden;
+          position: relative;
 
-          .label {
+          label {
             font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
-            font-size: 13px;
+            font-size: 11px;
             width: 40%;
             float: left;
             color: black;
             display: inline-block;
-
           }
 
           .field {
             font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
             font-size: 12px;
-            width: 50%;
+            width: 60%;
             float: left;
             padding-top: 5px;
             background-color: #FFF;
 
             &.top {
               padding-top: 0;
+              i {
+                position: absolute;
+                right: 6px;
+                top: 4px;
+              }
             }
+
+            &.date {
+              select {
+                width: 33.3333333%;
+              }
+            }
+
             input[type="text"],
             input[type="password"],
             input[type="email"] {
               float: left;
               border: 1px solid black;
               border-radius: 6px !important;
-              width: 171px;
-
+              width: 100%;
             }
             input[type="checkbox"] {
 
@@ -101,7 +112,7 @@
               height: 20px;
               min-width: 50px;
               background-color: #FFF;
-              width: 171px;
+              width: 100%;
             }
 
             .fa-check-circle {
