--- a/resources/assets/sass/profile/profile.scss
+++ b/resources/assets/sass/profile/profile.scss
@@ -255,7 +255,7 @@
         font-family:  'Open Sans', 'Droid Sans', sans-serif;
         color: #4a7fb3;
         font-weight: bold;
-        font-size: 16px;
+        font-size: 14px;
       }
       table{
         width:100%;
@@ -273,6 +273,27 @@
 
       float: left;
       width: calc(100% / 2);
+      img.icon{
+        margin-top:-20px;
+        position:absolute;
+        margin-left:140px;
+      }
+
+      .valido{
+        font-family:  'Open Sans', 'Droid Sans', sans-serif;
+        color: #71aa30;
+        font-size: 14px;
+      }
+      .pendente{
+        font-family:  'Open Sans', 'Droid Sans', sans-serif;
+        color: darkorange;
+        font-size: 14px;
+      }
+      .invalido{
+        font-family:  'Open Sans', 'Droid Sans', sans-serif;
+        color: darkred;
+        font-size: 14px;
+      }
 
       .title {
         font-family:  'Open Sans', 'Droid Sans', sans-serif;
@@ -329,6 +350,26 @@
       float: left;
       width: calc(100% / 2);
 
+      img.icon{
+        margin-top:-20px;
+        position:absolute;
+        margin-left:140px;
+      }
+      .valido{
+        font-family:  'Open Sans', 'Droid Sans', sans-serif;
+        color: #71aa30;
+        font-size: 14px;
+      }
+      .pendente{
+        font-family:  'Open Sans', 'Droid Sans', sans-serif;
+        color: darkorange;
+        font-size: 14px;
+      }
+      .invalido{
+        font-family:  'Open Sans', 'Droid Sans', sans-serif;
+        color: darkred;
+        font-size: 14px;
+      }
       .title {
         font-family:  'Open Sans', 'Droid Sans', sans-serif;
         color: #4a7fb3;
@@ -418,7 +459,7 @@
       font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
       color: #4a7fb3;
       font-weight: bold;
-      font-size: 16px;
+      font-size: 14px;
     }
     .texto{
       width:90%;
