--- a/public/assets/portal/css/profile.css
+++ b/public/assets/portal/css/profile.css
@@ -122,10 +122,10 @@
       .profile > .profilecontent .center .grupo .grupo-title {
         width: calc(100% / 4);
         float: left;
-        font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+        font-family: 'Open Sans', 'Droid Sans', sans-serif;
         color: #4a7fb3;
         font-weight: bold;
-        font-size: 16px; }
+        font-size: 14px; }
       .profile > .profilecontent .center .grupo .grupo-title.disabled {
         color: grey; }
       .profile > .profilecontent .center .grupo input .settings-switch {
