--- a/resources/assets/sass/profile/profile.scss
+++ b/resources/assets/sass/profile/profile.scss
@@ -176,10 +176,10 @@
 
           width: calc(100% / 4);
           float: left;
-          font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+          font-family: 'Open Sans', 'Droid Sans', sans-serif;
           color: #4a7fb3;
           font-weight: bold;
-          font-size: 16px;
+          font-size: 14px;
         }
         .grupo-title.disabled {
 
